--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,15 +9,15 @@
   cursor: pointer;
 }
 
-.button-mobile() {
-  padding: 10px 40px 10px 40px;
-  font-size: 2rem;
-  border-radius: 8px;
-  background-color: @button-bg;
-  color: white;
-  outline: 0;
-  cursor: pointer;
-}
+// .button-mobile() {
+//   padding: 10px 40px 10px 40px;
+//   font-size: 2rem;
+//   border-radius: 8px;
+//   background-color: @button-bg;
+//   color: white;
+//   outline: 0;
+//   cursor: pointer;
+// }
 
 .box-shadow() {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0), 0 6px 20px 0 rgba(0, 0, 0, 0.17);
