--- a/less/navigation.less
+++ b/less/navigation.less
@@ -17,8 +17,10 @@ nav {
   @media @tablet {
     width: 90%;
     margin: 0 auto;
+    height: 90px;
+    align-items: center;
   }
-  
+
   a {
     text-decoration: none;
     padding: 1em;
